# ros2_air

./: .gitignore  README.md  setup_conda_ros2air.sh  simulation-gazebo.py  start.sh  test_data  tracker.sh
src/circle/: CMakeLists.txt  package.xml
src/circle/src/: circle1.cpp  circle2_drones.cpp
src/drone_detector/: package.xml  setup.py
src/drone_detector/drone_detector/: __init__.py  drone_detector_node.py
src/drone_detector/launch/: drone_detector.launch.py
src/drone_detector/scripts/: drone_detector_node
src/drone_tracker/: CMakeLists.txt  package.xml
src/drone_tracker/launch/: drone_tracker.launch.py
src/drone_tracker/src/: drone_tracker_node.cpp
src/offboard_control/: CMakeLists.txt  package.xml
src/offboard_control/launch/: attitude_control.launch.py
src/offboard_control/src/: attitude_control.cpp  attitude_control_keyboard.cpp
